package maidsafe.vault.protobuf;
import "maidsafe/vault/pmid_account_holder/pmid_account.proto";
option optimize_for = LITE_RUNTIME;

message PmidTotals {
  required bytes serialised_pmid_registration = 1;
  required PmidRecord pmid_record = 2;
}

message FileId {
  required int32 index = 1;
  required bytes hash = 2;
}

// Data put to the network by the client
message PutData {
  required int32 type = 1;
  required bytes name = 2;
  required int32 cost = 3;
}

message MaidAccount {
  required bytes maid_name = 1;
  repeated PmidTotals pmid_totals = 2;
  repeated PutData recent_put_data = 3;
  required int64 total_claimed_available_size_by_pmids = 4;
  required int64 total_put_data = 5;
  repeated FileId file_ids = 6;
}

// Used as data field in MM's Reply to Put request.
message Cost {
  required int32 value = 1;
}
